--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -41,6 +41,15 @@
                     <label for="date_before">Purchase Date Before</label>
                     <input type="date" class="form-control" id="date_before" name="date_before">
                 </div>
+                <div class="form-group">
+                    <label for="borough">Borough</label>
+                    <input type="text" class="form-control" id="borough" name="borough">
+                </div>
+                <div class="form-group">
+                    <label for="neighborhood">Neighborhood</label>
+                    <input type="text" class="form-control" id="neighborhood" name="neighborhood">
+                </div>
+
                 <button type="submit" class="btn btn-primary">Update</button>
                 <button type="reset" class="btn btn-primary">Clear</button>
             </form>
