--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -55,6 +55,20 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <h1>Links</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href="{% url 'swagger-ui' %}">Swagger UI</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
